READMEの誤字を修正

--- a/README.mkd
+++ b/README.mkd
@@ -6,7 +6,7 @@
 
 ## 説明
 
-東京工業大学 ロボット技術研究会の市川 宙(Gimite)さんが中心となって作成した日本語人工無能ロイディを、Ruby1.9で動作するようにしたものです。  
+東京工業大学 ロボット技術研究会の市川 宙(Gimite)さんが中心となって作成した日本語人工無脳ロイディを、Ruby1.9で動作するようにしたものです。  
 Ruby1.8では動作しません。  
 
 ## 改変の内容
